versioned_docs/version-1.6.0/references/commands/cli/app/chart/epinio_app_chart.md
---
title: ""
sidebar_label: "epinio app chart"
---

<head>
  <link rel="canonical" href="https://docs.epinio.io/references/commands/cli/app/chart/epinio_app_chart"/>
</head>
## epinio app chart

Epinio application chart management

### Synopsis

Manage epinio application charts

### Options

```
  -h, --help   help for chart
```

### Options inherited from parent commands

```
  -c, --kubeconfig string        (KUBECONFIG) path to a kubeconfig, not required in-cluster
      --no-colors                Suppress colorized output
      --settings-file string     (EPINIO_SETTINGS) set path of settings file (default "~/.config/epinio/settings.yaml")
      --skip-ssl-verification    (SKIP_SSL_VERIFICATION) Skip the verification of TLS certificates
      --timeout-multiplier int   (EPINIO_TIMEOUT_MULTIPLIER) Multiply timeouts by this factor (default 1)
      --trace-level int          (TRACE_LEVEL) Only print trace messages at or above this level (0 to 255, default 0, print nothing)
      --verbosity int            (VERBOSITY) Only print progress messages at or above this level (0 or 1, default 0)
```

### SEE ALSO

* [epinio app](../epinio_app.md)	 - Epinio application features
* [epinio app chart default](./epinio_app_chart_default.md)	 - Set or show app chart default
* [epinio app chart list](./epinio_app_chart_list.md)	 - List application charts
* [epinio app chart show](./epinio_app_chart_show.md)	 - Describe application chart

